# web_api

./: .env  .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  prometheus.yml
web_api/: .gitignore  Cargo.toml
web_api/migrations/: 20250913100542_create_users.sql  20250913102105_create_streams.sql  20250913102338_create_follows.sql  20250913102549_create_chat.sql
web_api/src/: db.rs  main.rs
web_api/src/entities/: api_response.rs  auth.rs  claims.rs  mod.rs  users.rs
web_api/src/handlers/: auth.rs  user.rs
web_api/src/middleware/: auth.rs
web_api/src/models/: follows.rs  messages.rs  mod.rs  streams.rs  users.rs
web_api/src/routes/: api.rs  auth.rs  mod.rs  users.rs
