[package]
name = "web_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono", "migrate"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Variables de entorno
dotenvy = "0.15"

# Serialización JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Seguridad / Autenticación
argon2 = "0.5"            # hash de contraseñas
jsonwebtoken = "9"        # JWT para auth
uuid = "1.8"              # IDs únicos
chrono = { version = "0.4", features = ["serde"] }

tokio-tungstenite = "0.21"

redis = "0.8.0"